--- a/download/RunDownload.yml
+++ b/download/RunDownload.yml
@@ -2,7 +2,7 @@ name: Github wireboy.remote.download
 on:
     push:
         branches:
-            - main
+            - download
     schedule:
      - cron: '* * * * *'
 jobs:
@@ -18,9 +18,7 @@ jobs:
                 node-version: '12.x'
             - name: Run
               run: npm install
-
             - run: node download.js
-
               env:
                 EMAILPASS: ${{ secrets.EMAILPASS }}
                 SENDEMAIL: ${{ secrets.SENDEMAIL }}
