--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
                 node-version: '12.x'
             - name: Run
               run: npm install node-fetch
-            - run: node download/download.js
+            - run: node download.js
               env:
                 EMAILPASS: ${{ secrets.EMAILPASS }}
                 SENDEMAIL: ${{ secrets.SENDEMAIL }}
