--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,8 @@ jobs:
               with:
                 node-version: '12.x'
             - name: Run
-              run: npm install node-fetch
-            - run: node download.js
+              run: npm install node-fetch@3.2.1
+            - run: node download/download.js
               env:
                 EMAILPASS: ${{ secrets.EMAILPASS }}
                 SENDEMAIL: ${{ secrets.SENDEMAIL }}
